--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/2687a23fd5.js" crossorigin="anonymous"></script>
     <title>Authenticate Me</title>
   </head>
-  <body>
+  <body class="body">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
