--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/2687a23fd5.js" crossorigin="anonymous"></script>
-    <title>Authenticate Me</title>
+    <title>Galactic Getaways</title>
   </head>
   <body class="body">
     <div id="root"></div>
